Isntall gulp e gutil

--- a/package.json
+++ b/package.json
@@ -7,5 +7,9 @@
     "type": "git",
     "url": "?.git"
   },
-  "author": "Rodrigo Muniz"
+  "author": "Rodrigo Muniz",
+  "devDependencies": {
+    "gulp": "^3.9.1",
+    "gulp-util": "^3.0.7"
+  }
 }
